# keyscape

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml  build.rs
core/assets/: layout_g634_us.json  layout_us.json  py_runner.py
core/src/: audio.rs  color.rs  engine.rs  frame.rs  guard.rs  hid.rs  hotkeys.rs  input.rs  ipc.rs  layout.rs  main.rs  math.rs  palette.rs  params.rs  settings.rs  tray.rs
core/src/effects/: ambient.rs  cosmic.rs  digital.rs  kinetic.rs  mod.rs  organic.rs  physics.rs  python.rs  script.rs  typing.rs
docs/: README.md  ai-effect-prompt.txt  architecture.md  effects.md  js-effects.md  protocol.md  settings.md  troubleshooting.md
examples/js-effects/: plasma.js  typing_sparks.js
examples/python-effects/: plasma.py  typing_sparks.py
tools/: bundle-installer.ps1  gen-icon.ps1  install-finalize.ps1  install.ps1  make-ico.mjs  parse-layout.mjs
tools/demo/: .gitignore  README.md  capture.js  make-demo.ps1  package.json
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: ipc.ts  keyboard.ts  main.ts  onboarding.ts  params.ts  sound.ts  state.ts  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/src/views/: audio.ts  custom.ts  effects.ts  guide.ts  playlist.ts  settings.ts
