[package]
name = "keyscape-core"
version = "0.4.3"
edition = "2021"
description = "Keyscape lighting core: per-key RGB daemon for ASUS ROG laptops (N-KEY 0B05:19B6)"

[build-dependencies]
winres = "0.1"

[dependencies]
hidapi = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
cpal = "0.15"
rquickjs = "0.12"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
]
